<resources>
    <string name="app_name">mBus</string>
    <string name="sign_out">Sign Out</string>
    <string name="revoke_access">Revoke Access</string>
    <string name="status">Status</string>
    <string name="signing_in">Signing In</string>
    <string name="signed_out">Signed out</string>
    <string name="weather_check">Check Weather</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_email">bender@ilovebender.com</string>
    <string name="user_name">Ben Derisgreat</string>
    <string name="mbus_logo">mBus_logo</string>
    <string name="profile">Profile</string>
    <string name="weather">Weather</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="help">Help</string>
    <string name="reservations">Reservations</string>
    <string name="check_maps">Check Maps</string>
    <string name="check_next_trip">Check Next Trip</string>
    <string name="faq">FAQ</string>
    <string name="faq_q1a">Why mBus? \n Ever thought you needed an Uber but for 10 or more people?
    \n This is where mBus comes in. Book a whole bus for your travels!</string>
    <string name="faq_q2a">What is the \'m\' in mBus? \n The \'m\' stands for
        Mortezaie, who is a man I will never forget.</string>
    <string name="faq_q3a">Why only Pleasanton? \n This is the place the elusive Mortezaie resides \n
        Why not visit the man who inspired this all together?.</string>
    <string name="faq_q4a">Plans to expand? \n Yes! Suggest some places!</string>
    <string name="n_a">N/A</string>
    <string name="overview">Overview</string>
    <string name="contact_us">Contact Us</string>
    <string name="overview_about_us">mBus is an app that came to be when there was a need to go to
    Mortezaie\'s place but there were too many people. Rather than spending billions on 40 Uber\'s
    we decided to make an Uber bus and name it after the one and only, Mortezaie </string>
    <string name="general_concerns">General Concerns:
        <a href="mailto:support@cleverfinger.com.au?Subject=Lost%20Password" target="_top">general@mBus.idk</a>\n
        App Concerns:
        <a href="mailto:support@cleverfinger.com.au?Subject=Lost%20Password" target="_top">support@mBus.idk</a>
    </string>
    <string name="select_photo">Select Photo</string>
    <string name="user_profile_image">User Profile Image</string>
    <string name="name">Name</string>
    <string name="john_doe">John Doe</string>
    <string name="gender">gender</string>
    <string name="bus_information">Bus Information</string>
    <string name="bus_booked">Bus Booked</string>
    <string name="number_of_trips">Number of Trips</string>
    <string name="price">Price:</string>
    <string name="seat">Seat:</string>
    <string name="seats">Seats</string>
    <string name="arrival">Arrival:</string>
    <string name="departure">Departure:</string>
    <string name="trip_to">Trip To:</string>
    <string name="trip_from">Trip From:</string>
    <string name="bus_number">Bus Number:</string>
    <string name="your_next_reservation">Your Next Reservation:</string>
    <string name="available_buses">Available Buses</string>
    <string name="sorted_by">Sorted by:</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="title_activity_m_bus__location">Map</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="ok">OK</string>
    <string name="text_location_permission">Allow mBus to get your location?</string>
    <string name="app_logo">App Logo</string>
    <string name="book_a_trip">Book a Trip</string>
    <string name="from">From: </string>
    <string name="to">To: </string>
    <string name="pleasanton">Pleasanton</string>
    <string name="total_people">Total People: </string>
    <string name="total_people_hint">XX</string>
    <string name="date">Date: </string>
    <string name="mm_dd_yyyy">mm/dd/yyyy</string>
    <string name="continue_button">Continue</string>
    <string name="confirm_trip">Confirm this trip?</string>
    <string name="cancel_trip">Cancel</string>
    <string name="okay_trip">OK</string>
    <string name="double_tap">Double Tap Gesture Here</string>
    <string name="user_bus_number">4L</string>
    <string name="user_trips_taken">3</string>
</resources>
