<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.karan.mbus.views.mBus_BusDetailActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/bus_icon_layout">

    <ImageView
        android:id="@+id/ivImage"
        android:contentDescription="@string/user_profile_image"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:src="@drawable/ic_bus_stop" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/bus_information_table"
        android:layout_width="match_parent"
        android:layout_height="325dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bus_icon_layout"
        app:layout_constraintVertical_bias="1.0">

        <TableRow>

            <TextView
                android:id="@+id/bus_info"
                android:layout_gravity="center"
                android:layout_span="2"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/bus_information"
                android:textSize="26sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/bus_number"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/bus_number"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/bus_number_content"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/departure"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/departure"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/departure_content"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/arrival"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/arrival"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/arrival_content"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/price"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/price"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/price_content"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/seats"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/seats"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/seats_content"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/from"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/from"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/from_content"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/to"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/to"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/to_content"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

    </TableLayout>



</android.support.constraint.ConstraintLayout>
