<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.karan.mbus.views.mBus_NextBusActivity">

    <TableLayout
        android:id="@+id/next_reservation_table"
        android:layout_width="405dp"
        android:layout_height="605dp"
        android:orientation="horizontal"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TableRow>

            <TextView
                android:id="@+id/distance_title_textView"
                android:layout_gravity="center"
                android:layout_span="2"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/your_next_reservation"
                android:textSize="26sp"
                android:textStyle="bold|italic" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/number_textView"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/bus_number"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/bus_number_content_view"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/from_textView"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/trip_from"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/trip_from_content_view"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/to_textView"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/trip_to"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/trip_to_textView"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/depart_textView"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/departure"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/depart_content_view"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/arrival_textView"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/arrival"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/arrival_content_view"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/seat_textView"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/seat"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/seat_content_view"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/price_textView"
                android:gravity="start"
                android:padding="3dip"
                android:text="@string/price"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/price_contentView"
                android:gravity="end"
                android:padding="3dip"
                android:text="@string/n_a"
                android:textSize="23sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tap_gesture_textView"
        android:layout_width="157dp"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/double_tap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/next_reservation_table"
        app:layout_constraintVertical_bias="0.966" />


</android.support.constraint.ConstraintLayout>
